--- a/styles.css
+++ b/styles.css
@@ -3,23 +3,51 @@ body {
   color: #222;
 }
 
+h1 {
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  gap: 1.5rem; 
+}
+
 .emoji {
+  display: flex;
+  flex-direction: column;
   border: 1px solid #222;
   border-radius: 8px;
   padding: 1rem;
 }
 
+.icon {
+  font-size: 4rem;
+  margin-bottom: 1rem;
+}
+
 .emoji h2 {
-  margin: 0;
-  border-bottom: 2px solid #ccc;
+  margin: 0 0 0.5px;
+  font-size: 1.5px;
+  border: 2px solid #ccc;
+  padding: 0.25px;
+}
+
+.emoji paragraph {
+  flex: 1; 
+  margin: 1rem 0;
+  line-height: 1.4;
 }
 
 .emoji a {
+  align-self:  flex-start;
   text-decoration: none;
   background-color: #781BAA;
   color: white;
   padding: 1rem;
   border-radius: 8px;
+  font-weight: bold;
 }
 
 .icon {
